version/0.16/_sources/api/solver/_autosummary/settings/volumes.rst.txt
:orphan:

.. _volumes:

volumes
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.volumes.volumes
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`volumes_child <volumes_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`physics <physics>`       'physics' child.

========================   ====================

